Closed
Bug 453693
Opened 17 years ago
Closed 17 years ago
updater.exe sometimes creates the lock file in the wrong directory
Categories
(Toolkit :: Application Update, defect)
Tracking
()
RESOLVED
FIXED
mozilla1.9.1b1
People
(Reporter: robert.strong.bugs, Assigned: robert.strong.bugs)
References
Details
(Keywords: fixed1.9.0.4)
Attachments
(1 file)
This is due to the working dir not always being set to the directory where the binary lives.
| Assignee | ||
Comment 1•17 years ago
|
||
Attachment #336901 -
Flags: review?(ted.mielczarek)
Updated•17 years ago
|
Attachment #336901 -
Flags: review?(ted.mielczarek) → review+
| Assignee | ||
Updated•17 years ago
|
Flags: wanted1.9.0.x?
Version: Trunk → 1.9.0 Branch
| Assignee | ||
Updated•17 years ago
|
Attachment #336901 -
Flags: approval1.9.0.3?
| Assignee | ||
Comment 2•17 years ago
|
||
Comment on attachment 336901 [details] [diff] [review]
patch rev1 - use argv[4] which is the callback binary and append .update_in_progress.lock to the file name
Drivers, I'd like to get this simple fix for 1.9.0.3. There are some cases where the working dir is not the same as the app dir.
| Assignee | ||
Comment 3•17 years ago
|
||
Checked in to mozilla-central
http://hg.mozilla.org/mozilla-central/rev/e17fa56c1f5b68b8dd552c4b4a7ecd0c956d35e1
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
| Assignee | ||
Updated•17 years ago
|
Target Milestone: --- → mozilla1.9.1b1
Comment 4•17 years ago
|
||
Doesn't really meet the "wanted" criteria (security, stability, regression from maintenance release) for 1.9.0.x. However, we'll look at the patch later.
Flags: wanted1.9.0.x? → wanted1.9.0.x-
| Assignee | ||
Comment 6•17 years ago
|
||
Comment on attachment 336901 [details] [diff] [review]
patch rev1 - use argv[4] which is the callback binary and append .update_in_progress.lock to the file name
Drivers, it appears there are some edgecases where this is causing problems with Firefox 3.0.x such as bug 458884.
Comment 7•17 years ago
|
||
Comment on attachment 336901 [details] [diff] [review]
patch rev1 - use argv[4] which is the callback binary and append .update_in_progress.lock to the file name
Approved for 1.9.0.4, a=dveditz for release-drivers.
What is the test scenario for QA to make this "sometimes" into an "always" so it can be verified?
Attachment #336901 -
Flags: approval1.9.0.4? → approval1.9.0.4+
| Assignee | ||
Comment 8•17 years ago
|
||
This has worked for me previously and should be enough.
Create a shortcut to firefox.exe and set the working directory to a directory that the user doesn't have permissions to. Run Firefox twice and perform the software update on the second run.
| Assignee | ||
Comment 9•17 years ago
|
||
Checked in for 1.9.0.4 / Firefox 3.0.4
Checking in mozilla/toolkit/mozapps/update/src/updater/updater.cpp;
/cvsroot/mozilla/toolkit/mozapps/update/src/updater/updater.cpp,v <-- updater.
cpp
new revision: 1.39; previous revision: 1.38
done
Keywords: fixed1.9.0.4
| Assignee | ||
Comment 10•17 years ago
|
||
Due to this bringing up the UAC dialog there is no way to create a unit test.
Flags: in-testsuite-
Flags: in-litmus?
| Assignee | ||
Comment 11•17 years ago
|
||
(In reply to comment #8)
> This has worked for me previously and should be enough.
>
> Create a shortcut to firefox.exe and set the working directory to a directory
> that the user doesn't have permissions to. Run Firefox twice and perform the
> software update on the second run.
Also, this test should be done on Windows XP.
Comment 12•16 years ago
|
||
Are there an easier steps to reproduce for this bug other than the one mentioned in comment #8 , Robert? It's going to be difficult to make this into a Full Functional Test otherwise.
| Assignee | ||
Comment 13•16 years ago
|
||
Regretfully there isn't.
| Assignee | ||
Updated•15 years ago
|
Flags: in-litmus?
You need to log in
before you can comment on or make changes to this bug.
Description
•