 Bug 453693 - updater.exe sometimes creates the lock file in the wrong directory. r=ted.mielczarek